# SecondPractical

./: Algorithms.h  CMakeLists.txt  Constants.h  Elevator.h  Floor.h  LookupTable.h  Passenger.h  Plot.h  Qlearning.h  README.md  State.h  Util.h  main.cpp
Parameter sweep/: QlearningAlpha  QlearningAlphaSecond  QlearningEpsilon  QlearningEpsilonSecond  QlearningGamma  QlearningGammaSecond  SarsaAlpha  SarsaAlphaSecond  SarsaEpsilon  SarsaEpsilonSecond  SarsaGamma  SarsaGammaSecond
Results/: normal.csv  sarsa.csv  sarsa5.csv
